--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="./">Studio</a></li>
-          <li><a href="./">Portolio</a></li>
+          <li><a href="./">Portfolio</a></li>
           <li><a href="./">Contacts</a></li>
         </ul>
       </nav>
@@ -28,36 +28,31 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h3>Strategy</h3>
+        <h2>Features</h2>
         <ul>
           <li>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-        </ul>
-        <h3>Punctuality</h3>
-        <ul>
           <li>
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-        </ul>
-        <h3>Diligence</h3>
-        <ul>
           <li>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-        </ul>
-        <h3>Technologies</h3>
-        <ul>
           <li>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -75,7 +70,7 @@
               width="264"
             />
             <h3>Mark Guerrero</h3>
-            <p>Produck Designer</p>
+            <p>Product Designer</p>
           </li>
           <li>
             <img
